POWR-950 Prevent image from stretching to fill container width

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -36,10 +36,18 @@
 }
 /* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
 .embed-image.align-right {
-    float: right;
-    max-width: 50%;
-    margin-left: 2rem;
+  float: right;
+  height: auto;
+  max-width: 50%;
+  margin-left: 2rem;
+  text-align: center;
+  .field--type-image img {
+    height: auto;
+    max-width: 100%;
+    width: auto;
+  }
 }
+
 .embed-image.responsive-right {
   float: right;
   max-width: 50%;
